# dns-orchestrator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml
dns-orchestrator-app/: Cargo.toml  README.md  README.zh-CN.md
dns-orchestrator-app/src/: lib.rs
dns-orchestrator-app/src/adapters/: keyring_credential_store.rs  mod.rs
dns-orchestrator-app/src/adapters/sqlite/: account_repo.rs  credential_store.rs  domain_metadata_repo.rs  mod.rs
dns-orchestrator-app/src/adapters/sqlite/entity/: account.rs  credential.rs  domain_metadata.rs  mod.rs
dns-orchestrator-app/src/adapters/sqlite/migration/: m20250215_000001_create_initial_tables.rs  mod.rs
dns-orchestrator-app/tests/: app_state_tests.rs  sqlite_store_tests.rs
dns-orchestrator-core/: Cargo.toml  README.md  README.zh-CN.md
dns-orchestrator-core/docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md
dns-orchestrator-core/src/: error.rs  lib.rs  test_utils.rs
dns-orchestrator-core/src/crypto/: mod.rs  versions.rs
dns-orchestrator-core/src/services/: account_bootstrap_service.rs  account_lifecycle_service.rs  account_service.rs  credential_management_service.rs  dns_service.rs  domain_metadata_service.rs  domain_service.rs  import_export_service.rs  migration_service.rs  mod.rs  provider_metadata_service.rs
dns-orchestrator-core/src/services/toolbox/: dns_propagation.rs  dnssec.rs  http_headers.rs  mod.rs  ssl.rs
dns-orchestrator-core/src/traits/: account_repository.rs  credential_store.rs  domain_metadata_repository.rs  mod.rs  provider_registry.rs
dns-orchestrator-core/src/types/: account.rs  dns.rs  domain.rs  domain_metadata.rs  export.rs  mod.rs  response.rs
dns-orchestrator-core/src/utils/: datetime.rs  mod.rs
dns-orchestrator-mcp/: Cargo.toml  README.md  README.zh-CN.md
dns-orchestrator-mcp/src/: client_integration_tests.rs  main.rs  schemas.rs  server.rs  server_tests.rs  test_mocks.rs
dns-orchestrator-mcp/src/adapters/: account_repository.rs  credential_store.rs  domain_metadata_repository.rs  mod.rs
dns-orchestrator-provider/: Cargo.toml  README.md  README.zh-CN.md
dns-orchestrator-provider/docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md
dns-orchestrator-provider/src/: error.rs  factory.rs  http_client.rs  lib.rs  traits.rs  types.rs
dns-orchestrator-provider/src/providers/: aliyun.rs  common.rs  dnspod.rs  huaweicloud.rs  mod.rs
dns-orchestrator-provider/src/providers/aliyun/: error.rs  http.rs  mod.rs  provider.rs  sign.rs  types.rs
dns-orchestrator-provider/src/providers/cloudflare/: error.rs  http.rs  mod.rs  provider.rs  types.rs
dns-orchestrator-provider/src/providers/dnspod/: error.rs  http.rs  mod.rs  provider.rs  sign.rs  types.rs
dns-orchestrator-provider/src/providers/huaweicloud/: error.rs  http.rs  mod.rs  provider.rs  sign.rs  types.rs
dns-orchestrator-provider/src/utils/: datetime.rs  log_sanitizer.rs  mod.rs
dns-orchestrator-provider/tests/: aliyun_test.rs  cloudflare_test.rs  dnspod_test.rs  huaweicloud_test.rs
dns-orchestrator-provider/tests/common/: mod.rs
dns-orchestrator-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
dns-orchestrator-tauri/capabilities/: mobile.json
dns-orchestrator-tauri/icons/: icon.icns
dns-orchestrator-tauri/src/: error.rs  lib.rs  main.rs  types.rs
dns-orchestrator-tauri/src/adapters/: account_repository.rs  credential_store.rs  mod.rs
dns-orchestrator-tauri/src/commands/: account.rs  dns.rs  domain.rs  domain_metadata.rs  mod.rs  toolbox.rs  updater.rs
dns-orchestrator-tauri/tauri-plugin-apk-installer/: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
dns-orchestrator-tauri/tauri-plugin-apk-installer/android/: build.gradle.kts  consumer-rules.pro
dns-orchestrator-tauri/tauri-plugin-apk-installer/permissions/: default.toml
dns-orchestrator-tauri/tauri-plugin-apk-installer/src/: commands.rs  lib.rs  mobile.rs  models.rs
dns-orchestrator-toolbox/: Cargo.toml  README.md  README.zh-CN.md
dns-orchestrator-toolbox/src/: error.rs  lib.rs  types.rs
dns-orchestrator-toolbox/src/services/: dns.rs  dns_propagation.rs  dnssec.rs  http_headers.rs  ip.rs  mod.rs  resolver.rs  ssl.rs  whois.rs
dns-orchestrator-tui/: Cargo.toml  DESIGN.md  README.md
dns-orchestrator-tui/src/: app.rs  main.rs
dns-orchestrator-tui/src/backend/: account_repository.rs  account_service.rs  config_service.rs  core_service.rs  credential_service.rs  domain_metadata_repository.rs  mod.rs
dns-orchestrator-tui/src/event/: handler.rs  keymap.rs  mod.rs
dns-orchestrator-tui/src/i18n/: en_us.rs  keys.rs  mod.rs  zh_cn.rs
dns-orchestrator-tui/src/message/: app.rs  content.rs  mod.rs  modal.rs  navigation.rs
dns-orchestrator-tui/src/model/: app.rs  focus.rs  mod.rs  navigation.rs  page.rs
dns-orchestrator-tui/src/model/domain/: account.rs  dns_record.rs  domain.rs  mod.rs
dns-orchestrator-tui/src/model/state/: accounts.rs  dns_records.rs  domains.rs  mod.rs  modal.rs  settings.rs  toolbox.rs
dns-orchestrator-tui/src/update/: content.rs  mod.rs  modal.rs  navigation.rs
dns-orchestrator-tui/src/util/: mod.rs  terminal.rs
dns-orchestrator-tui/src/view/: layout.rs  mod.rs  theme.rs
dns-orchestrator-tui/src/view/components/: mod.rs  modal.rs  navigation.rs  statusbar.rs
dns-orchestrator-tui/src/view/pages/: accounts.rs  dns_records.rs  domains.rs  home.rs  mod.rs  settings.rs  toolbox.rs
dns-orchestrator-web/: Cargo.toml
dns-orchestrator-web/migration/: Cargo.toml
src-actix-web/: Cargo.toml
src-actix-web/migration/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
src-tauri/src/adapters/: account_repository.rs  credential_store.rs  domain_metadata_repository.rs  mod.rs
src-tauri/src/commands/: account.rs  dns.rs  domain.rs  domain_metadata.rs  mod.rs  toolbox.rs
src-tauri/src/credentials/: keychain.rs  mod.rs
src-tauri/src/providers/: aliyun.rs  cloudflare.rs  dnspod.rs  mod.rs
src-tauri/src/storage/: account_store.rs  mod.rs
src-tauri/tauri-plugin-apk-installer/: Cargo.toml
(+167 files in other folders)
