[package]
name = "dns-orchestrator-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Platform-agnostic application bootstrap for DNS Orchestrator"
authors = ["AptS-1547 <apts-1547@esaps.net>"]
repository = "https://github.com/AptS-1547/dns-orchestrator"
homepage = "https://github.com/AptS-1547/dns-orchestrator"
keywords = ["dns", "orchestrator"]
categories = ["web-programming"]
rust-version = "1.89"

[features]
default = ["rustls"]
rustls = ["dns-orchestrator-core/rustls"]
keyring-store = ["dep:keyring"]
sqlite-store = ["dep:sea-orm", "dep:sea-orm-migration"]

[dependencies]
dns-orchestrator-core = { workspace = true }
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Optional: keyring-based credential store (desktop only)
keyring = { version = "3", optional = true, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }

# Optional: SQLite-based unified store (MCP/TUI/CLI)
sea-orm = { workspace = true, optional = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { workspace = true, optional = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = "3"

[lints]
workspace = true
