[package]
name = "dns-orchestrator-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core business logic for DNS Orchestrator"
authors = ["AptS-1547 <apts-1547@esaps.net>"]

[features]
default = ["rustls"]
# TLS 后端选择（二选一）
# native-tls = ["dep:native-tls-crate", "dep:x509-parser", "reqwest/native-tls"]  # 已弃用，统一使用 rustls
rustls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pki-types", "dep:webpki-roots", "dep:x509-parser", "reqwest/rustls-tls"]

[dependencies]
# DNS Provider 抽象库
dns-orchestrator-provider = { workspace = true, features = ["all-providers"] }

# 核心依赖
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# 异步运行时
tokio = { workspace = true, features = ["sync"] }
futures.workspace = true

# 工具类
uuid.workspace = true
chrono.workspace = true
log.workspace = true

# 加密 (导入导出)
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2.workspace = true
base64 = "0.22"
hex.workspace = true
rand = "0.9"

# Toolbox: WHOIS
whois-rust = { version = "1.6", features = ["tokio"] }
regex = "1"

# Toolbox: DNS 查询
hickory-resolver = { version = "0.25", features = ["dnssec-ring"] }

# Toolbox: IP 查询
reqwest.workspace = true

# SSL 检查 (feature-gated)
native-tls-crate = { package = "native-tls", version = "0.2", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pki-types = { version = "1", optional = true }
webpki-roots = { version = "1", optional = true }
x509-parser = { version = "0.18", optional = true }
url = "2.5.8"

[lints]
workspace = true
