[package]
name = "dns-orchestrator-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core business logic for DNS Orchestrator"
authors = ["AptS-1547 <apts-1547@esaps.net>"]
repository = "https://github.com/AptS-1547/dns-orchestrator"
homepage = "https://github.com/AptS-1547/dns-orchestrator"
keywords = ["dns", "orchestrator"]
categories = ["web-programming"]
rust-version = "1.89"

[features]
default = ["rustls"]
# TLS 后端选择（二选一）
# native-tls = ["dep:native-tls-crate", "dep:x509-parser", "reqwest/native-tls"]  # 已弃用，统一使用 rustls
rustls = ["dns-orchestrator-provider/rustls"]

[dependencies]
# DNS Provider 抽象库
dns-orchestrator-provider = { workspace = true, features = ["all-providers"] }

# 核心依赖
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# 异步运行时
tokio = { workspace = true, features = ["sync"] }
futures.workspace = true

# 工具类
uuid.workspace = true
chrono.workspace = true
log.workspace = true

# 加密 (导入导出)
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2.workspace = true
base64 = "0.22"
hex.workspace = true
rand = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
