[package]
name = "dns-orchestrator-provider"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "DNS provider abstraction library for multiple cloud platforms"
authors = ["AptS-1547 <apts-1547@esaps.net>"]

[features]
default = ["native-tls", "all-providers"]
# TLS 后端选择（二选一）
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
# 按需启用 providers
cloudflare = []
aliyun = []
dnspod = []
huaweicloud = []
all-providers = ["cloudflare", "aliyun", "dnspod", "huaweicloud"]

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["time"] }
hmac = "0.12"
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
uuid.workspace = true
urlencoding.workspace = true
log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
