[package]
name = "dns-orchestrator-tui"
version = "0.1.0"
edition = "2024"
authors = ["AptS-1547 <apts-1547@esaps.net>", "ZnLuAr <znluar0514@gmail.com>"]
description = "Terminal User Interface for DNS Orchestrator"
license = "MIT"
repository = "https://github.com/AptS-1547/dns-orchestrator"
keywords = ["dns", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[dependencies]
# TUI 框架
ratatui = "0.29"
crossterm = "0.28"

# Unicode 字符宽度计算
unicode-width = "0.2"

# 异步运行时
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true

# 错误处理
anyhow = "1.0"
thiserror.workspace = true

# 序列化（配置文件）
serde.workspace = true
serde_json.workspace = true

# 时间处理
chrono.workspace = true

# 凭证存储
keyring = "3"

# 配置目录检测
dirs = "5"

# 日志
log.workspace = true

# DNS Orchestrator 核心库
dns-orchestrator-core = { workspace = true, features = ["rustls"] }
dns-orchestrator-provider = { workspace = true, features = [
    "all-providers",
    "rustls",
] }

[dev-dependencies]
# 测试
tokio-test = "0.4"
