[package]
name = "dns-orchestrator"
version = "0.0.1-alpha"
description = "A DNS Orchestrator built with Tauri"
license = "MIT"
authors = ["AptS-1547 <apts-1547@esaps.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dns_orchestrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2"
keyring = { version = "3", features = [
    "apple-native",      # macOS/iOS
    "windows-native",    # Windows
    "sync-secret-service", "crypto-rust"  # Linux/FreeBSD/OpenBSD (DBus Secret Service)
] }
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"


